--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.0",
     "@mui/x-data-grid": "^6.19.0",
     "@mui/x-date-pickers": "^6.19.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@types/react-big-calendar": "^1.16.1",
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
