--- a/azure-deploy.yml
+++ b/azure-deploy.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main, master ]
 
 env:
-  AZURE_WEBAPP_NAME: your-app-name    # Change this to your app name
+  AZURE_WEBAPP_NAME: Xhihangule-Property-Management    # Change this to your app name
   AZURE_WEBAPP_PACKAGE_PATH: '.'
   NODE_VERSION: '18.x'
 
@@ -18,6 +18,13 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+
+    - name: Azure login (OIDC)
+      uses: azure/login@v2
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
     - name: Set up Node.js
       uses: actions/setup-node@v4
