--- a/client/package.json
+++ b/client/package.json
@@ -101,12 +101,15 @@
     "style-loader": "^4.0.0",
     "tailwind-merge": "^3.3.0",
     "ts-jest": "^29.3.4",
-    "typescript": "^5.3.3",
+    "typescript": "4.9.5",
     "vite": "^5.1.4",
     "vitest": "^1.6.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "overrides": {
+    "ajv": "8.17.1"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
