--- a/.github/workflows/node-build.yml
+++ b/.github/workflows/node-build.yml
@@ -16,7 +16,23 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-      - run: npm ci
+          cache-dependency-path: |
+            client/package-lock.json
+            server/package-lock.json
+      - name: Ensure lockfile (client)
+        run: |
+          if [ ! -f package-lock.json ]; then npm i --package-lock-only; fi
+        working-directory: ./client
+      - name: Install deps (client)
+        run: npm ci
+        working-directory: ./client
+      - name: Ensure lockfile (server)
+        run: |
+          if [ ! -f package-lock.json ]; then npm i --package-lock-only; fi
+        working-directory: ./server
+      - name: Install deps (server)
+        run: npm ci
+        working-directory: ./server
       - run: npm run build
 
 
