--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -49,28 +49,17 @@ jobs:
           subscription-id: ${{ env.AZURE_SUBSCRIPTION_ID }}
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: 20.x
           cache: 'npm'
           cache-dependency-path: |
             client/package-lock.json
             server/package-lock.json
 
-      - name: Ensure client lockfile
-        run: |
-          if [ ! -f package-lock.json ]; then npm i --package-lock-only; fi
-        working-directory: ./client
-
       - name: Install dependencies (client)
         run: npm ci
         working-directory: ./client
-
-      - name: Ensure server lockfile
-        run: |
-          if [ ! -f package-lock.json ]; then npm i --package-lock-only; fi
-        working-directory: ./server
-
       - name: Install dependencies (server)
         run: npm ci
         working-directory: ./server
