--- a/.github/workflows/node-build.yml
+++ b/.github/workflows/node-build.yml
@@ -11,7 +11,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - uses: actions/setup-node@v3
         with:
           node-version: 20
@@ -19,17 +21,9 @@ jobs:
           cache-dependency-path: |
             client/package-lock.json
             server/package-lock.json
-      - name: Ensure lockfile (client)
-        run: |
-          if [ ! -f package-lock.json ]; then npm i --package-lock-only; fi
-        working-directory: ./client
       - name: Install deps (client)
         run: npm ci
         working-directory: ./client
-      - name: Ensure lockfile (server)
-        run: |
-          if [ ! -f package-lock.json ]; then npm i --package-lock-only; fi
-        working-directory: ./server
       - name: Install deps (server)
         run: npm ci
         working-directory: ./server
