--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -72,13 +72,9 @@ jobs:
           echo "PWD=$(pwd)" && ls -la
           if [ -f package-lock.json ]; then echo "Found client/package-lock.json"; else echo "::warning::client/package-lock.json missing"; fi
         working-directory: ./client
-      - name: Install dependencies (client) using lockfile
-        if: ${{ hashFiles('client/package-lock.json') != '' }}
-        run: npm ci
-        working-directory: ./client
-      - name: Install dependencies (client) without lockfile
-        if: ${{ hashFiles('client/package-lock.json') == '' }}
-        run: npm install --no-audit --no-fund
+      - name: Install dependencies (client)
+        run: |
+          npm ci || npm install --no-audit --no-fund
         working-directory: ./client
       - name: Verify lockfile (server)
         continue-on-error: true
@@ -86,13 +82,9 @@ jobs:
           echo "PWD=$(pwd)" && ls -la
           if [ -f package-lock.json ]; then echo "Found server/package-lock.json"; else echo "::warning::server/package-lock.json missing"; fi
         working-directory: ./server
-      - name: Install dependencies (server) using lockfile
-        if: ${{ hashFiles('server/package-lock.json') != '' }}
-        run: npm ci
-        working-directory: ./server
-      - name: Install dependencies (server) without lockfile
-        if: ${{ hashFiles('server/package-lock.json') == '' }}
-        run: npm install --no-audit --no-fund
+      - name: Install dependencies (server)
+        run: |
+          npm ci || npm install --no-audit --no-fund
         working-directory: ./server
 
       - name: Build application
