--- a/.github/workflows/node-build.yml
+++ b/.github/workflows/node-build.yml
@@ -21,6 +21,11 @@ jobs:
           cache-dependency-path: |
             client/package-lock.json
             server/package-lock.json
+      - name: Show npm version and config
+        run: |
+          node -v
+          npm -v
+          npm config list
       - name: Show workspace layout
         run: |
           echo "PWD=$(pwd)"
@@ -33,13 +38,9 @@ jobs:
           echo "PWD=$(pwd)" && ls -la
           if [ -f package-lock.json ]; then echo "Found client/package-lock.json"; else echo "::warning::client/package-lock.json missing"; fi
         working-directory: ./client
-      - name: Install deps (client) using lockfile
-        if: ${{ hashFiles('client/package-lock.json') != '' }}
-        run: npm ci
-        working-directory: ./client
-      - name: Install deps (client) without lockfile
-        if: ${{ hashFiles('client/package-lock.json') == '' }}
-        run: npm install --no-audit --no-fund
+      - name: Install deps (client)
+        run: |
+          npm ci || npm install --no-audit --no-fund
         working-directory: ./client
       - name: Verify lockfile (server)
         continue-on-error: true
@@ -47,13 +48,9 @@ jobs:
           echo "PWD=$(pwd)" && ls -la
           if [ -f package-lock.json ]; then echo "Found server/package-lock.json"; else echo "::warning::server/package-lock.json missing"; fi
         working-directory: ./server
-      - name: Install deps (server) using lockfile
-        if: ${{ hashFiles('server/package-lock.json') != '' }}
-        run: npm ci
-        working-directory: ./server
-      - name: Install deps (server) without lockfile
-        if: ${{ hashFiles('server/package-lock.json') == '' }}
-        run: npm install --no-audit --no-fund
+      - name: Install deps (server)
+        run: |
+          npm ci || npm install --no-audit --no-fund
         working-directory: ./server
       - run: npm run build
 
