--- a/.github/workflows/main_xihangulepm.yml
+++ b/.github/workflows/main_xihangulepm.yml
@@ -11,6 +11,7 @@ on:
 
 jobs:
   build:
+    if: ${{ false }}
     runs-on: windows-latest
     permissions:
       contents: read #This is required for actions/checkout
@@ -36,6 +37,7 @@ jobs:
           path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
+    if: ${{ false }}
     runs-on: windows-latest
     needs: build
     environment:
