--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -49,6 +49,12 @@ jobs:
           client-id: ${{ env.AZURE_CLIENT_ID }}
           tenant-id: ${{ env.AZURE_TENANT_ID }}
           subscription-id: ${{ env.AZURE_SUBSCRIPTION_ID }}
+          allow-no-subscriptions: true
+
+      - name: Set default subscription
+        run: |
+          az account set --subscription "$AZURE_SUBSCRIPTION_ID"
+          az account show -o table
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
