--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -126,12 +126,11 @@ jobs:
           docker build -t "$IMAGE_REPO:${{ github.sha }}" .
           docker tag "$IMAGE_REPO:${{ github.sha }}" "$IMAGE_REPO:latest"
 
-      - name: Login to Azure Container Registry
-        uses: azure/docker-login@v1
-        with:
-          login-server: ${{ env.REGISTRY_LOGIN_SERVER }}
-          username: ${{ env.REGISTRY_USERNAME }}
-          password: ${{ env.REGISTRY_PASSWORD }}
+      - name: ACR login (OIDC)
+        shell: bash
+        run: |
+          ACR_NAME=$(echo "$REGISTRY_LOGIN_SERVER" | cut -d'.' -f1)
+          az acr login --name "$ACR_NAME"
 
       - name: Push Docker image
         env:
