--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "@aws-sdk/client-s3": "^3.826.0",
     "@aws-sdk/s3-request-presigner": "^3.826.0",
     "@types/bcryptjs": "^2.4.6",
@@ -37,6 +38,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
