--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/react": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
     "@hookform/resolvers": "^3.10.0",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
@@ -29,6 +33,7 @@
     "d3-time": "^3.1.0",
     "d3-time-format": "^4.1.0",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.18",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "react": "^18.2.0",
