--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,8 @@
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --ignore-watch dist --watch src src/index.ts",
     "build": "tsc",
+    "reconcile:dry": "npm run build && node dist/scripts/reconcile.js --dry-run",
+    "reconcile:apply": "npm run build && node dist/scripts/reconcile.js --apply",
     "test": "jest"
   },
   "keywords": [],
