Harden backend so ledgers are immutable. and cant be deleted.

--- a/client/.env
+++ b/client/.env
@@ -4,3 +4,7 @@ AWS_SECRET_ACCESS_KEY=your_secret_key
 AWS_REGION=your_region
 AWS_BUCKET_NAME=your_bucket_name  
 VITE_API_URL=http://localhost:5000/api
+JWT_SECRET=your-super-secret-key-change-this-in-production
+   JWT_SECRET=Garett@1998
+   NODE_ENV=development
+   CLIENT_URL=http://localhost:3000
