--- a/server/.env
+++ b/server/.env
@@ -26,5 +26,9 @@ AUTH_DB_URI=mongodb://localhost:27017/auth-db
 PORT=5000
 NODE_ENV=development
 
+# server/.env
+MONGODB_URI="mongodb+srv://GarettMatsilele:Moreen@1981@xhihangule-api.global.mongocluster.cosmos.azure.com/?tls=true&authMechanism=SCRAM-SHA-256&retrywrites=false&maxIdleTimeMS=120000"
+ACCOUNTING_DB_URI="mongodb+srv://GarettMatsilele:Moreen@1981@xhihangule-api.global.mongocluster.cosmos.azure.com/?tls=true&authMechanism=SCRAM-SHA-256&retrywrites=false&maxIdleTimeMS=120000"
+
 # CORS
 CORS_ORIGIN=http://localhost:3000
