Reset Password setup

--- a/server/.env
+++ b/server/.env
@@ -1,34 +1,30 @@
-PORT=5000
-MONGODB_URI=mongodb://localhost:27017/property-management
-JWT_SECRET=your-super-secret-key-change-this-in-production
-   JWT_SECRET=Garett@1998
-   NODE_ENV=development
-   CLIENT_URL=http://localhost:3000
-   AWS_ACCESS_KEY_ID=your_access_key
-AWS_SECRET_ACCESS_KEY=your_secret_key
-AWS_REGION=your_region
-AWS_BUCKET_NAME=your_bucket_name
-   CLIENT_URL=http://localhost:5173
-# Server Configuration
-PORT=5000
-NODE_ENV=development
+﻿NODE_ENV=production
 
+# Current frontend URL (update manually when switching frontend host)
+APP_BASE_URL=https://www.xhihangule.com
+CLIENT_URL=https://www.xhihangule.com
+ALLOWED_ORIGINS=https://www.xhihangule.com,https://xhihangule.com
 
-# JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
-JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-in-production
+# Automatic brand switch (defaults to XHI until cutoff)
+# Set BRAND_ACTIVE=MANTIS to force switch early
+BRAND_CUTOFF_ISO=2026-01-01T00:00:00Z
 
-# Database
-MONGODB_URI=mongodb://localhost:27017/property-management
-AUTH_DB_URI=mongodb://localhost:27017/auth-db
+# Xhihangule brand (active until 2025-12-31)
+MAILTRAP_API_TOKEN_XHI=b8037a4a2145221d064e6bca15d4bf2f
+MAILTRAP_FROM_EMAIL_XHI=hello@www.xhihangule.com
+MAILTRAP_FROM_NAME_XHI=Xhihangule
+SMTP_HOST_XHI=live.smtp.mailtrap.io
+SMTP_PORT_XHI=587
+SMTP_USER_XHI=apismtp@mailtrap.io
+SMTP_PASS_XHI=b8037a4a2145221d064e6bca15d4bf2f
+SMTP_FROM_XHI="Xhihangule <hello@www.xhihangule.com>"
 
-# Server
-PORT=5000
-NODE_ENV=development
-
-# server/.env
-MONGODB_URI="mongodb+srv://GarettMatsilele:Moreen@1981@xhihangule-api.global.mongocluster.cosmos.azure.com/?tls=true&authMechanism=SCRAM-SHA-256&retrywrites=false&maxIdleTimeMS=120000"
-ACCOUNTING_DB_URI="mongodb+srv://GarettMatsilele:Moreen@1981@xhihangule-api.global.mongocluster.cosmos.azure.com/?tls=true&authMechanism=SCRAM-SHA-256&retrywrites=false&maxIdleTimeMS=120000"
-
-# CORS
-CORS_ORIGIN=http://localhost:3000
+# Mantis Africa brand (goes live on/after 2026-01-01)
+MAILTRAP_API_TOKEN_MANTIS=9e416e702fbf230eb1cf7b8e4c371ce8
+MAILTRAP_FROM_EMAIL_MANTIS=hello@mantisafrica.com
+MAILTRAP_FROM_NAME_MANTIS=Mantis Africa
+SMTP_HOST_MANTIS=live.smtp.mailtrap.io
+SMTP_PORT_MANTIS=587
+SMTP_USER_MANTIS=apismtp@mailtrap.io
+SMTP_PASS_MANTIS=9e416e702fbf230eb1cf7b8e4c371ce8
+SMTP_FROM_MANTIS="Mantis Africa <hello@mantisafrica.com>"
