--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.11",
     "puppeteer": "^24.31.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
