--- a/docs/env.production.example
+++ b/docs/env.production.example
@@ -8,6 +8,11 @@ CLIENT_URL=https://www.xhihangule.com
 # SMTP_PASS=<YOUR_MAILTRAP_SMTP_PASSWORD>
 # SMTP_FROM="Xhihangule <no-reply@xhihangule.com>"
 
+# For production delivery via Mailtrap Email Sending (Send API):
+# MAILTRAP_API_TOKEN=<YOUR_MAILTRAP_SEND_API_TOKEN>
+# MAILTRAP_FROM_EMAIL=no-reply@xhihangule.com
+# MAILTRAP_FROM_NAME=Xhihangule
+
 # For production delivery via Resend:
 # RESEND_API_KEY=<YOUR_RESEND_API_KEY>
 # SMTP_FROM="Xhihangule <no-reply@xhihangule.com>"
