Paypal SDK addition

--- a/client/.env
+++ b/client/.env
@@ -8,3 +8,6 @@ JWT_SECRET=your-super-secret-key-change-this-in-production
    JWT_SECRET=Garett@1998
    NODE_ENV=development
    CLIENT_URL=http://localhost:3000
+VITE_API_URL=http://localhost:5000/api
+VITE_PAYPAL_CLIENT_ID=AYrGbhVTN8kZOEkGr65B9SHybfmpP-oX_3CBHO1_7rKUQITg6fMYPzq3vKTGekPk5gh4sbdYpaVqCUB-
+REACT_APP_PAYPAL_CLIENT_ID=AYrGbhVTN8kZOEkGr65B9SHybfmpP-oX_3CBHO1_7rKUQITg6fMYPzq3vKTGekPk5gh4sbdYpaVqCUB-
