--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.15.0",
     "@mui/x-data-grid": "^6.19.0",
     "@mui/x-date-pickers": "^6.19.0",
+    "@paypal/react-paypal-js": "^8.9.2",
     "@tailwindcss/forms": "^0.5.10",
     "@types/react-big-calendar": "^1.16.1",
     "ajv": "^6.12.6",
