--- a/docs/env.production.example
+++ b/docs/env.production.example
@@ -35,4 +35,11 @@ MONGODB_URI=mongodb+srv://<user>:<password>@<cluster>/<db>?retryWrites=true&w=ma
 # If using brand-specific variables, optionally set:
 # BRAND_ACTIVE=XHI
 
+# PayPal (set PAYPAL_ENV=live in production; use sandbox in development)
+# PAYPAL_ENV=live
+# PAYPAL_CLIENT_ID=<YOUR_PAYPAL_LIVE_CLIENT_ID>
+# PAYPAL_CLIENT_SECRET=<YOUR_PAYPAL_LIVE_CLIENT_SECRET>
+# Optional override (normally not needed):
+# PAYPAL_API_BASE=https://api-m.paypal.com
+
 
