--- a/server/.env.production
+++ b/server/.env.production
@@ -19,3 +19,38 @@ MAILTRAP_FROM_NAME=Xhihangule
 
 # Optional brand flag if you use brand-specific envs
 # BRAND_ACTIVE=XHI
+NODE_ENV=production
+
+# Current frontend URL (update manually when switching frontend host)
+APP_BASE_URL=https://www.xhihangule.com
+CLIENT_URL=https://www.xhihangule.com
+ALLOWED_ORIGINS=https://www.xhihangule.com,https://xhihangule.com
+
+# Automatic brand switch (defaults to XHI until cutoff)
+# Set BRAND_ACTIVE=MANTIS to force switch early
+BRAND_CUTOFF_ISO=2026-01-01T00:00:00Z
+
+# Xhihangule brand (active until 2025-12-31)
+MAILTRAP_API_TOKEN_XHI=b8037a4a2145221d064e6bca15d4bf2f
+MAILTRAP_FROM_EMAIL_XHI=hello@www.xhihangule.com
+MAILTRAP_FROM_NAME_XHI=Xhihangule
+SMTP_HOST_XHI=live.smtp.mailtrap.io
+SMTP_PORT_XHI=587
+SMTP_USER_XHI=apismtp@mailtrap.io
+SMTP_PASS_XHI=b8037a4a2145221d064e6bca15d4bf2f
+SMTP_FROM_XHI="Xhihangule <hello@www.xhihangule.com>"
+
+# Mantis Africa brand (goes live on/after 2026-01-01)
+MAILTRAP_API_TOKEN_MANTIS=9e416e702fbf230eb1cf7b8e4c371ce8
+MAILTRAP_FROM_EMAIL_MANTIS=hello@mantisafrica.com
+MAILTRAP_FROM_NAME_MANTIS=Mantis Africa
+SMTP_HOST_MANTIS=live.smtp.mailtrap.io
+SMTP_PORT_MANTIS=587
+SMTP_USER_MANTIS=apismtp@mailtrap.io
+SMTP_PASS_MANTIS=9e416e702fbf230eb1cf7b8e4c371ce8
+SMTP_FROM_MANTIS="Mantis Africa <hello@mantisafrica.com>"
+
+# Paypal Vars 
+PAYPAL_ENV=live
+PAYPAL_CLIENT_ID=AUoEDWYqCnZ0bUyrO_PULNFr1jRF7F_oQsoJKlhJ4HSL40UhBaj06MWN02Xxil4TFVI_0hHuHH4oyuHo
+PAYPAL_CLIENT_SECRET=EMNle8bZjQIc9PmQTLygH6O-t0-cd5LPJuUIaVvFu8fHN41_KxPlXoUKbvGsY2uYo4ZYJ-iTbObtnedr
