migration  to mantisafrica

--- a/docs/env.production.example
+++ b/docs/env.production.example
@@ -1,6 +1,8 @@
-APP_BASE_URL=https://www.xhihangule.com
-CLIENT_URL=https://www.xhihangule.com
-ALLOWED_ORIGINS=https://www.xhihangule.com,https://www.xhihangule.com
+APP_BASE_URL=https://www.mantisafrica.com
+CLIENT_URL=https://www.mantisafrica.com
+ALLOWED_ORIGINS=https://www.mantisafrica.com,https://mantisafrica.com
+# Optional: set cookie domain explicitly for cross-subdomain cookies
+COOKIE_DOMAIN=.mantisafrica.com
 
 # Required secrets in production
 JWT_SECRET=replace-with-strong-random-string
@@ -12,25 +14,25 @@ MONGODB_URI=mongodb+srv://<user>:<password>@<cluster>/<db>?retryWrites=true&w=ma
 # SMTP_PORT=587
 # SMTP_USER=<YOUR_MAILTRAP_SMTP_USERNAME>
 # SMTP_PASS=<YOUR_MAILTRAP_SMTP_PASSWORD>
-# SMTP_FROM="Xhihangule <no-reply@xhihangule.com>"
+# SMTP_FROM="Mantis Africa <no-reply@mantisafrica.com>"
 
 # For production delivery via Mailtrap Email Sending (Send API):
 # MAILTRAP_API_TOKEN=<YOUR_MAILTRAP_SEND_API_TOKEN>
-# MAILTRAP_FROM_EMAIL=no-reply@xhihangule.com
-# MAILTRAP_FROM_NAME=Xhihangule
+# MAILTRAP_FROM_EMAIL=no-reply@mantisafrica.com
+# MAILTRAP_FROM_NAME=Mantis Africa
 
 # For production delivery via Resend:
 # RESEND_API_KEY=<YOUR_RESEND_API_KEY>
-# SMTP_FROM="Xhihangule <no-reply@xhihangule.com>"
+# SMTP_FROM="Mantis Africa <no-reply@mantisafrica.com>"
 
 # For production delivery via SendGrid:
 # SENDGRID_API_KEY=<YOUR_SENDGRID_API_KEY>
-# SMTP_FROM="Xhihangule <no-reply@xhihangule.com>"
+# SMTP_FROM="Mantis Africa <no-reply@mantisafrica.com>"
 
 # For production delivery via Mailgun:
 # MAILGUN_API_KEY=<YOUR_MAILGUN_API_KEY>
 # MAILGUN_DOMAIN=mg.your-domain.com
-# SMTP_FROM="Xhihangule <no-reply@xhihangule.com>"
+# SMTP_FROM="Mantis Africa <no-reply@mantisafrica.com>"
 
 # If using brand-specific variables, optionally set:
 # BRAND_ACTIVE=XHI
