--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Xhihangule",
-  "name": "Xhihangule Property Management",
+  "short_name": "Mantis Africa",
+  "name": "Mantis Africa Property Management",
   "icons": [
     {
       "src": "favicon.ico",
