--- a/docs/env.production.example
+++ b/docs/env.production.example
@@ -16,7 +16,14 @@ MONGODB_URI=mongodb+srv://<user>:<password>@<cluster>/<db>?retryWrites=true&w=ma
 # SMTP_PASS=<YOUR_MAILTRAP_SMTP_PASSWORD>
 # SMTP_FROM="Mantis Africa <no-reply@mantisafrica.com>"
 
-# For production delivery via Mailtrap Email Sending (Send API):
+# For production delivery via Mailtrap Email Sending (SMTP - recommended):
+# SMTP_HOST=live.smtp.mailtrap.io
+# SMTP_PORT=587
+# SMTP_USER=apismtp@mailtrap.io
+# SMTP_PASS=<YOUR_API_TOKEN>
+# SMTP_FROM="Mantis Africa <no-reply@mantisafrica.com>"
+#
+# Optional fallback: Mailtrap Send API (if SMTP unavailable)
 # MAILTRAP_API_TOKEN=<YOUR_MAILTRAP_SEND_API_TOKEN>
 # MAILTRAP_FROM_EMAIL=no-reply@mantisafrica.com
 # MAILTRAP_FROM_NAME=Mantis Africa
@@ -34,8 +41,18 @@ MONGODB_URI=mongodb+srv://<user>:<password>@<cluster>/<db>?retryWrites=true&w=ma
 # MAILGUN_DOMAIN=mg.your-domain.com
 # SMTP_FROM="Mantis Africa <no-reply@mantisafrica.com>"
 
-# If using brand-specific variables, optionally set:
-# BRAND_ACTIVE=XHI
+# If using brand-specific variables (to keep multiple brands side-by-side), optionally set:
+# BRAND_ACTIVE=MANTIS
+# APP_BASE_URL_MANTIS=https://www.mantisafrica.com
+# CLIENT_URL_MANTIS=https://www.mantisafrica.com
+# SMTP_HOST_MANTIS=live.smtp.mailtrap.io
+# SMTP_PORT_MANTIS=587
+# SMTP_USER_MANTIS=apismtp@mailtrap.io
+# SMTP_PASS_MANTIS=<YOUR_API_TOKEN>
+# SMTP_FROM_MANTIS="Mantis Africa <no-reply@mantisafrica.com>"
+# MAILTRAP_API_TOKEN_MANTIS=<YOUR_MAILTRAP_SEND_API_TOKEN>
+# MAILTRAP_FROM_EMAIL_MANTIS=no-reply@mantisafrica.com
+# MAILTRAP_FROM_NAME_MANTIS=Mantis Africa
 
 # PayPal (set PAYPAL_ENV=live in production; use sandbox in development)
 # PAYPAL_ENV=live
