--- a/server/.env.production
+++ b/server/.env.production
@@ -19,7 +19,7 @@ MAILTRAP_FROM_NAME=Mantis Africa
 # MAILGUN_DOMAIN=
 
 # Optional brand flag if you use brand-specific envs
-# BRAND_ACTIVE=XHI
+# BRAND_ACTIVE=MANTIS
 NODE_ENV=production
 
 # Current frontend URL (update manually when switching frontend host)
@@ -31,15 +31,6 @@ ALLOWED_ORIGINS=https://www.mantisafrica.com,https://mantisafrica.com
 # Set BRAND_ACTIVE=MANTIS to force switch early
 BRAND_CUTOFF_ISO=2026-01-01T00:00:00Z
 
-# Xhihangule brand (active until 2025-12-31)
-MAILTRAP_API_TOKEN_XHI=b8037a4a2145221d064e6bca15d4bf2f
-MAILTRAP_FROM_EMAIL_XHI=hello@www.xhihangule.com
-MAILTRAP_FROM_NAME_XHI=Xhihangule
-SMTP_HOST_XHI=live.smtp.mailtrap.io
-SMTP_PORT_XHI=587
-SMTP_USER_XHI=apismtp@mailtrap.io
-SMTP_PASS_XHI=b8037a4a2145221d064e6bca15d4bf2f
-SMTP_FROM_XHI="Xhihangule <hello@www.xhihangule.com>"
 
 # Mantis Africa brand (goes live on/after 2026-01-01)
 MAILTRAP_API_TOKEN_MANTIS=9e416e702fbf230eb1cf7b8e4c371ce8
