--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "react": "^18.2.0",
     "react-big-calendar": "^1.18.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.56.4",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.0",
