--- a/docs/env.production.example
+++ b/docs/env.production.example
@@ -41,24 +41,18 @@ MONGODB_URI=mongodb+srv://<user>:<password>@<cluster>/<db>?retryWrites=true&w=ma
 # MAILGUN_DOMAIN=mg.your-domain.com
 # SMTP_FROM="Mantis Africa <no-reply@mantisafrica.com>"
 
-# If using brand-specific variables (to keep multiple brands side-by-side), optionally set:
-# BRAND_ACTIVE=MANTIS
-# APP_BASE_URL_MANTIS=https://www.mantisafrica.com
-# CLIENT_URL_MANTIS=https://www.mantisafrica.com
-# SMTP_HOST_MANTIS=live.smtp.mailtrap.io
-# SMTP_PORT_MANTIS=587
-# SMTP_USER_MANTIS=apismtp@mailtrap.io
-# SMTP_PASS_MANTIS=<YOUR_API_TOKEN>
-# SMTP_FROM_MANTIS="Mantis Africa <no-reply@mantisafrica.com>"
-# MAILTRAP_API_TOKEN_MANTIS=<YOUR_MAILTRAP_SEND_API_TOKEN>
-# MAILTRAP_FROM_EMAIL_MANTIS=no-reply@mantisafrica.com
-# MAILTRAP_FROM_NAME_MANTIS=Mantis Africa
+# (Single brand: Mantis Africa)
+# Optionally you may use *_MANTIS suffixed variants instead of the unsuffixed names,
+# but multi-brand (XHI) is no longer supported.
 
-# PayPal (set PAYPAL_ENV=live in production; use sandbox in development)
-# PAYPAL_ENV=live
-# PAYPAL_CLIENT_ID=<YOUR_PAYPAL_LIVE_CLIENT_ID>
-# PAYPAL_CLIENT_SECRET=<YOUR_PAYPAL_LIVE_CLIENT_SECRET>
-# Optional override (normally not needed):
-# PAYPAL_API_BASE=https://api-m.paypal.com
+# Paynow (required for online card/wallet payments)
+# Set these in your hosting environment or in server/.env.production
+PAYNOW_INTEGRATION_ID=<YOUR_PAYNOW_INTEGRATION_ID>
+PAYNOW_INTEGRATION_KEY=<YOUR_PAYNOW_INTEGRATION_KEY>
+# Optional explicit callback URLs; defaults are computed from PUBLIC_BASE_URL/host
+# PAYNOW_RESULT_URL=https://www.mantisafrica.com/api/paynow/result
+# PAYNOW_RETURN_URL=https://www.mantisafrica.com/api/paynow/return
+# If your app sits behind a reverse proxy/CDN, set PUBLIC_BASE_URL to your public origin
+# PUBLIC_BASE_URL=https://www.mantisafrica.com
 
 
