--- a/server/.env.production
+++ b/server/.env.production
@@ -42,6 +42,12 @@ SMTP_USER_MANTIS=apismtp@mailtrap.io
 SMTP_PASS_MANTIS=9e416e702fbf230eb1cf7b8e4c371ce8
 SMTP_FROM_MANTIS="Mantis Africa <hello@mantisafrica.com>"
 
-# Paypal Vars 
+# Paynow vars
+PAYNOW_INTEGRATION_ID=23136
+PAYNOW_INTEGRATION_KEY=a7a20b4e-bf1d-425e-90d3-d1720dd898ba
+# Optional (recommended behind proxies/CDNs)
+# PUBLIC_BASE_URL=https://your-domain.com
+# PAYNOW_RESULT_URL=https://your-domain.com/api/paynow/result
+# PAYNOW_RETURN_URL=https://your-domain.com/api/paynow/return
 
 
