--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --ignore-watch dist --watch src src/index.ts",
     "build": "tsc",
+    "start:prod": "cross-env NODE_ENV=production ENV_FILE=.env.production node dist/index.js",
     "reconcile:dry": "npm run build && node dist/scripts/reconcile.js --dry-run",
     "reconcile:apply": "npm run build && node dist/scripts/reconcile.js --apply",
     "ledger:maintain": "npm run build && node dist/scripts/ledgerMaintenance.js",
@@ -42,6 +43,7 @@
     "nodemailer": "^7.0.11",
     "paynow": "^2.2.2",
     "puppeteer": "^24.31.0",
+    "cross-env": "^7.0.3",
     "save": "^2.9.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
