--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm start",
     "server:prod": "cd server && npm run start:prod",
+    "start:prod": "npm run server:prod",
     "client": "cd client && npm start",
     "build": "concurrently \"npm run build:server\" \"npm run build:client\"",
     "build:server": "cd server && npm run build",
