--- a/server/.env
+++ b/server/.env
@@ -4,6 +4,7 @@
 APP_BASE_URL=https://www.mantisafrica.com
 CLIENT_URL=https://www.mantisafrica.com
 ALLOWED_ORIGINS=https://www.mantisafrica.com,https://mantisafrica.com
+BRAND_ACTIVE=MANTIS
 
 # Automatic brand switch (defaults to XHI until cutoff)
 # Set BRAND_ACTIVE=MANTIS to force switch early
@@ -16,7 +17,7 @@ MAILTRAP_FROM_EMAIL_MANTIS=hello@mantisafrica.com
 MAILTRAP_FROM_NAME_MANTIS=Mantis Africa
 SMTP_HOST_MANTIS=live.smtp.mailtrap.io
 SMTP_PORT_MANTIS=587
-SMTP_USER_MANTIS=apismtp@mailtrap.io
+SMTP_USER_MANTIS=api.smtp@mailtrap.io
 SMTP_PASS_MANTIS=9e416e702fbf230eb1cf7b8e4c371ce8
 SMTP_FROM_MANTIS="Mantis Africa <hello@mantisafrica.com>"
 
