--- a/server/.env.production
+++ b/server/.env.production
@@ -32,13 +32,13 @@ ALLOWED_ORIGINS=https://www.mantisafrica.com,https://mantisafrica.com
 BRAND_CUTOFF_ISO=2026-01-01T00:00:00Z
 
 
-# Mantis Africa brand (goes live on/after 2026-01-01)
-MAILTRAP_API_TOKEN_MANTIS=9e416e702fbf230eb1cf7b8e4c371ce8
+# Mantis Africa vars
+MAILTRAP_API_TOKEN_MANTIS=1764235015
 MAILTRAP_FROM_EMAIL_MANTIS=hello@mantisafrica.com
-MAILTRAP_FROM_NAME_MANTIS=Mantis Africa
+MAILTRAP_FROM_NAME_MANTIS=MantisAfrica.com
 SMTP_HOST_MANTIS=live.smtp.mailtrap.io
 SMTP_PORT_MANTIS=587
-SMTP_USER_MANTIS=apismtp@mailtrap.io
+SMTP_USER_MANTIS=api.smtp@mailtrap.io
 SMTP_PASS_MANTIS=9e416e702fbf230eb1cf7b8e4c371ce8
 SMTP_FROM_MANTIS="Mantis Africa <hello@mantisafrica.com>"
 
