--- a/server/.env
+++ b/server/.env
@@ -12,13 +12,13 @@ BRAND_CUTOFF_ISO=2026-01-01T00:00:00Z
 
 
 # Mantis Africa brand (goes live on/after 2026-01-01)
-MAILTRAP_API_TOKEN_MANTIS=9e416e702fbf230eb1cf7b8e4c371ce8
+MAILTRAP_API_TOKEN_MANTIS=2336e7adf27f7726cc7171342cad29de
 MAILTRAP_FROM_EMAIL_MANTIS=hello@mantisafrica.com
 MAILTRAP_FROM_NAME_MANTIS=Mantis Africa
 SMTP_HOST_MANTIS=live.smtp.mailtrap.io
 SMTP_PORT_MANTIS=587
-SMTP_USER_MANTIS=api.smtp@mailtrap.io
-SMTP_PASS_MANTIS=9e416e702fbf230eb1cf7b8e4c371ce8
+SMTP_USER_MANTIS=api
+SMTP_PASS_MANTIS=2336e7adf27f7726cc7171342cad29de
 SMTP_FROM_MANTIS="Mantis Africa <hello@mantisafrica.com>"
 
 # Paypal Vars
